<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Film List</string>
    <string name="second_fragment_label">Movie Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_synopsis">Synopsis</string>
    <string name="title_score">Score</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_popularity">Popularity</string>
    <string name="title_director">Director</string>
    <string name="title_writer">Writer</string>
    <string name="title_actors">Actors</string>

    <string name="search_edit_text_hint">Search Movie</string>
    <string name="no_item_searched">No Item searched</string>
</resources>