<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        tools:context=".MovieDetailFragment">

        <RelativeLayout
            android:id="@+id/rlTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_movie_test"
                android:contentDescription="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/ivPoster"
                android:layout_alignBottom="@id/ivPoster"
                android:layout_margin="15dp"
                android:layout_toStartOf="@+id/fabPlay"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white_10_transparency"
                    android:text="Captain Marvel"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white_10_transparency"
                    android:text="2018"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/ivPoster"
                android:layout_alignBottom="@id/ivPoster"
                android:layout_margin="20dp"
                android:src="@drawable/ic_play" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlTop">

            <LinearLayout
                android:id="@+id/llMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llInfo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvGenre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="genre"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/round_circle" />

                    <TextView
                        android:id="@+id/tvRuntime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="2hr 50 min"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/round_circle" />

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="6.8"
                        android:textSize="20sp"
                        app:drawableLeftCompat="@drawable/ic_star" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/title_synopsis"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tvSynopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="synopsis info"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llInfo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_score"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/tvScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="7.2"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_reviews"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/tvReview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="154"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_popularity"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/tvPopularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawablePadding="5dp"
                            android:text="304"
                            android:textSize="20sp"
                            app:drawableLeftCompat="@drawable/ic_arrow_down" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvMiddle">

            <LinearLayout
                android:id="@+id/llBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_weight="0.3"
                        android:text="@string/title_director"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/tvDirector"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.7"
                        android:text="Director Name"
                        android:textSize="19sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_weight="0.3"
                        android:text="@string/title_writer"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/tvWriter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.7"
                        android:text="Writer Name"
                        android:textSize="19sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_weight="0.3"
                        android:text="@string/title_actors"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/tvActors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.7"
                        android:text="Actor Name"
                        android:textSize="19sp" />


                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/flLoading"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:animateLayoutChanges="true"
            android:background="#000000"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>